# QuickPaste

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES_NATIVE.md  THIRD_PARTY_LICENSES_NPM.md  THIRD_PARTY_LICENSES_RUST.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  security-audit.yml
docs/: architecture.md  quality.md  release.md  testing.md
docs/decisions/: 0001-windows-tauri-modular-monolith.md  0002-least-privilege-elevated-paste.md  0003-github-release-updater.md  0004-executable-local-history-data.md
docs/releases/: v0.1.0.md  v0.10.0-verification.md  v0.10.0.md  v0.11.0-verification.md  v0.11.0.md  v0.12.0-verification.md  v0.12.0.md  v0.13.0-verification.md  v0.13.0.md  v0.14.0-verification.md  v0.14.0.md  v0.14.1-verification.md  v0.14.1.md  v0.15.0-verification.md  v0.15.0.md  v0.16.0-verification.md  v0.16.0.md  v0.17.0-verification.md  v0.17.0.md  v0.17.1-verification.md  v0.17.1.md  v0.18.0-verification.md  (+28 more)
scripts/: check-code-highlight-build.mjs  check-code-highlight-build.test.mjs  check-privacy.mjs  check-privacy.test.mjs  check-repository.mjs  check-repository.test.mjs  check-runtime-boundaries.mjs  check-runtime-boundaries.test.mjs  check-third-party-notices.mjs  check-versions.mjs  check-versions.test.mjs  generate-native-notices.mjs  generate-npm-notices.mjs  generate-rust-notices.mjs  security-governance.test.mjs
src/: App.code-preview.test.ts  App.native-settings.test.ts  App.quick-ux.test.ts  App.test.ts  App.vue  i18n.test.ts  i18n.ts  style.css  style.test.ts
src-tauri/: Cargo.toml  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: history_bench.rs
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_formats.rs  history.rs  lib.rs  main.rs  metrics.rs  ocr.rs  qr.rs  system_actions.rs  updater.rs
(+93 files in other folders)
