[package]
name = "quickpaste"
version = "0.21.0"
description = "闪电剪贴板 QuickPaste — 快速、本地优先的 Windows 剪贴板"
authors = ["QuickPaste"]
publish = false
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quickpaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
arboard = "3.6.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
image = { version = "0.25", default-features = false, features = ["png"] }
getrandom = "0.3"
rusqlite = { version = "0.37", features = ["backup", "bundled", "trace"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rqrr = "0.10.1"
semver = "1.0"
sha2 = "0.11"
url = "2.5"
unicode-normalization = "=0.1.24"

[dev-dependencies]
qrcode = "0.14.1"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.1"
windows = { version = "0.61.3", features = [
  "Globalization",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_Security",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_IO",
  "Win32_System_Ole",
  "Win32_System_Pipes",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_WinRT",
  "Win32_UI_Accessibility",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }
